# spot_ros_autonomy

./: CMakeLists.txt  LICENSE  README.md  obstacle_avoidance.py  package.xml  spot.urdf
config/gait/: gait.yaml
launch/: gazebo_world_large.launch  gazebo_world_large_1.launch  gazebo_world_large_2.launch  gazebo_world_large_3.launch  gazebo_world_small.launch  slam.launch
scripts/: obs_avo_test.py  obstacle_avoidance.py
worlds/: gaze_test_world_small.world  gaze_world_large_1.world  gaze_world_large_2.world  gaze_world_large_3.world
