<?xml version="1.0"?>
<package format="2">
  <name>spot_ros_autonomy</name>
  <version>0.1.0</version>
  <description>spot ros autonomy Package</description>

  <maintainer email="psxvn1@nottingham.ac.uk">Victor Zhi Heung Ngo</maintainer>
  <author>Victor Zhi Heung Ngo</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>champ_base</exec_depend>
  
</package>